[project]
name = "pydantic-graph-interrupt"
version = "0.1.0"
description = "Interrupt nodes for pydantic-graph"
readme = "README.md"
authors = [
    { name = "vduseev", email = "vagiz@duseev.com" }
]
maintainers = [
    { name = "vduseev", email = "vagiz@duseev.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic-graph>=0.3.1",
    "pydantic-graph-persistence",
]
keywords = ["pydantic-graph", "interrupt", "graph", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[tool.uv.sources]
pydantic-graph-persistence = { path = "../pydantic-graph-persistence", editable = true }

[project.urls]
"Homepage" = "https://github.com/vduseev/pydantic-graph-interrupt"
"Documentation" = "https://github.com/vduseev/pydantic-graph-interrupt"
"Repository" = "https://github.com/vduseev/pydantic-graph-interrupt"
"Issues" = "https://github.com/vduseev/pydantic-graph-interrupt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
